// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> deve renderizar o botão desabilitado 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    disabled={true}
    outlined={false}
    primary={false}
    secundary={false}
    small={false}
  >
    Desabilitado
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Desabilitado",
      "className": "n-btn n-btn-disabled",
      "disabled": true,
      "onClick": undefined,
    },
    "ref": null,
    "rendered": "Desabilitado",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Desabilitado",
        "className": "n-btn n-btn-disabled",
        "disabled": true,
        "onClick": undefined,
      },
      "ref": null,
      "rendered": "Desabilitado",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Button /> deve renderizar o botão padrão 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    disabled={false}
    outlined={false}
    primary={false}
    secundary={false}
    small={false}
  >
    Padrão
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Padrão",
      "className": "n-btn",
      "disabled": false,
      "onClick": undefined,
    },
    "ref": null,
    "rendered": "Padrão",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Padrão",
        "className": "n-btn",
        "disabled": false,
        "onClick": undefined,
      },
      "ref": null,
      "rendered": "Padrão",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Button /> deve renderizar o botão primario 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    disabled={false}
    outlined={false}
    primary={true}
    secundary={false}
    small={false}
  >
    Primário
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Primário",
      "className": "n-btn n-btn-primary",
      "disabled": false,
      "onClick": undefined,
    },
    "ref": null,
    "rendered": "Primário",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Primário",
        "className": "n-btn n-btn-primary",
        "disabled": false,
        "onClick": undefined,
      },
      "ref": null,
      "rendered": "Primário",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
